New programming image, added some details for worktime, also added some commas

--- a/cv.tex
+++ b/cv.tex
@@ -41,10 +41,8 @@
 %  \section{Mail}
 %    \href{mailto:tilljander.rasmus@gmail.com}{\textbf{tilljander.rasmus@}\\gmail.com}
 %    ~
-
   \section{Programming}
-  
-    \includegraphics[scale=0.62]{img/programming.png}
+    \includegraphics[width=0.18\paperwidth]{img/programming.pdf}
  %    \vspace{0.3cm}
     ~
     ~
@@ -76,21 +74,21 @@
 
 \textbf{Email} tilljander.rasmus@gmail.com
 
-\textbf{Adress} Polhemsgatan 19A, 371 40, Blekinge Sweden
+\textbf{Adress} Polhemsgatan 19A, 371 40, Blekinge, Sweden
 
 \vspace{0.7cm}
 \section{Experience}
 \begin{entrylist}
   \entry
     {09/14 - 12/14}
-    {Consultant, Software Engineer}
+    {Consultant, Software Engineer (4 months)}
     {HiQ, Karlskrona, Sweden}
     {Project based employment at HiQ Karlskrona AB in which I worked as a software developer at Ericsson AB in Karlskrona. The project included working with Ericssons internal systems, vaadin, scala and java.\\}
   \entry
-    {11/11 - 09/13}
-    {IT-Helpdesk}
+    {11/11 - 09/01}
+    {IT-Helpdesk (2 years, 1 month)}
     {Blekinge Institute of Technology, Sweden}
-    {I answered questions and solved problems regarding the IT-services provided by Blekinge Institute of Technology. The work included working with services as the PayEx payment system and general problem solving with the printing system accessible by students. Bilingual support.}
+    {I answered questions and solved problems regarding the IT-services provided by Blekinge Institute of Technology. The work included working with services as the PayEx payment system and general problem solving with the printing system accessible by students.}
 \end{entrylist}
 
 \vspace{0.7cm}
@@ -99,7 +97,7 @@
   \entry
     {2010 - 2016}
     {College}
-    {Blekinge Institute of Technology, Sweden}
+    {Blekinge Institute of Technology, Karlskrona, Sweden}
     {Degee of Master of Science in Engineering: Game and Software Engineering\\
     Title of the Thesis:\emph{ Regional time stepping with two-scale PCISPH method}\\}
   \entry
@@ -111,7 +109,7 @@
 }
 \\
 \begin{flushleft}
-\emph{February 27th, 2015}
+\emph{Mars 7th, 2015}
 \end{flushleft}
 \begin{flushright}
 \emph{Rasmus Tilljander}
