Updated skills to reflect that I'm fresh out of school. Compared to senior this is more appropirate.

--- a/cv.tex
+++ b/cv.tex
@@ -86,9 +86,8 @@ ItalicFont = Fontin-Italic.otf
 %%%
 \section{Skills}
 \begin{tabular}{rl}
-Basic Knowledge:& Unix, IA-32, X86-64, CI, \textsc{sql}, {\fb \LaTeX}, Javascript, \textsc{HTML} \setmainfont[SmallCapsFont=Fontin-SmallCaps.otf]{Fontin.otf}\\
-Intermediate Knowledge:& Linux, C, \textsc{cmake}, Performance, Bash, Android, Java, DirectX\\
-Advanced knowledge: &\textsc{C++}, Git, Agile Development
+Basic Knowledge:& Unix, IA-32, X86-64, CI, \textsc{sql}, Android, C, Bash \setmainfont[SmallCapsFont=Fontin-SmallCaps.otf]{Fontin.otf}\\
+Intermediate Knowledge:& \textsc{C++}, Git, Agile Development, Linux, \textsc{cmake}, Performance,\\&  Java, DirectX\\
 \end{tabular}
 
 %%%
