Finished for now 2016.6.1

--- a/cv.tex
+++ b/cv.tex
@@ -134,7 +134,9 @@ included working with Ericssons internal systems, vaadin, scala and java.
 \begin{tabular}{rl}
 Degree:&  Master of Science in Game and Software Engineering\\
 Thesis:& Combining Regional Time Stepping With Two-Scale PCISPH Method \\
-Notable project:& <We built a gameengine from scratch using DirectX and C++>
+Notable project:& During a project we built a game engine and associated \\
+&game from scratch in C++ using DirectX, PhysX, FMod, SDL and Winsock2.\\
+& \url{https://github.com/Meraz/doremi}
 \end{tabular}\\
 
 %%%
