Removed draft text

--- a/cv.tex
+++ b/cv.tex
@@ -39,19 +39,15 @@ ItalicFont = Fontin-Italic.otf
 %-------------WATERMARK TEST [**not part of a CV**]---------------
 \usepackage[absolute]{textpos}
 
-\setlength{\TPHorizModule}{30mm}
-\setlength{\TPVertModule}{\TPHorizModule}
-\textblockorigin{2mm}{0.65\paperheight}
-\setlength{\parindent}{0pt}
-\usepackage[printwatermark]{xwatermark}
-\usepackage{xcolor}
-\usepackage{graphicx}
-\usepackage{lipsum}
-\newwatermark[allpages,color=red!50,angle=45,scale=1,xpos=-85,ypos=125]{DRAFT}
-
-
-
-
+%\setlength{\TPHorizModule}{30mm}
+%\setlength{\TPVertModule}{\TPHorizModule}
+%\textblockorigin{2mm}{0.65\paperheight}
+%\setlength{\parindent}{0pt}
+%\usepackage[printwatermark]{xwatermark}
+%\usepackage{xcolor}
+%\usepackage{graphicx}
+%\usepackage{lipsum}
+%\newwatermark[allpages,color=red!50,angle=45,scale=1,xpos=-85,ypos=125]{DRAFT}
 
 %--------------------BEGIN DOCUMENT----------------------
 \begin{document}
