Changed were to was

--- a/cv.tex
+++ b/cv.tex
@@ -108,7 +108,7 @@ Company:& HiQ Karlskrona AB \\
 Technologies:&  Linux, Java8, Vaadin, SQL, Spring, REST, Yaml, Cloudify, Android development, Git, Gradle, Groovy\\
 Description:& Full-time employment where I worked as a software developer for Ericsson AB. The project is a\\&
 continuation of the project listed below. A proof of concept which explored a BSS approach for\\&
-providing Internet as a service, it were presented in Berlin at OPNFV in June 2016. I also\\&
+providing Internet as a service, it was presented in Berlin at OPNFV in June 2016. I also\\&
 manage the internal IT system at HiQ Karlskrona.
 \end{tabular}\\
 
@@ -120,7 +120,7 @@ Technologies:&  Java, Vaadin, Spring, Rest, Yaml, Cloudify, Android development,
 Description:& Full-time project based employment where I worked as a software engineer for Ericsson AB.\\&
 The team consisted of five individuals and for the first two months in the project I worked as\\&
 a general developer. For the rest three months I acted as both scrum master as well as a\\&
-developer within the team. We worked on a proof of concept for Ericsson which were\\& 
+developer within the team. We worked on a proof of concept for Ericsson which was\\& 
 presented in Barcelone at Mobile World Congress in February 2016.\\
 \end{tabular}\\
 
