Minor spelling fixes.

--- a/cv.tex
+++ b/cv.tex
@@ -121,7 +121,7 @@ Description:& Full-time project based employment where I worked as a software en
 The team consisted of five individuals and for the first two months in the project I worked as\\&
 a general developer. For the rest three months I acted as both scrum master as well as a\\&
 developer within the team. We worked on a proof of concept for Ericsson which was\\& 
-presented in Barcelone at Mobile World Congress in February 2016.\\
+presented in Barcelona at Mobile World Congress in February 2016.\\
 \end{tabular}\\
 
 \textbf{Contractor, Software Developer} 2015-09-01 - 2015-12-31 (4 Months) \\
@@ -129,8 +129,8 @@ presented in Barcelone at Mobile World Congress in February 2016.\\
 Company:& HiQ Karlskrona AB \\
 Technologies:&  Java, Scala, Vaadin, Gradle, Git, Groovy, GUI, Linux\\
 % Location:& Karlskrona, Sweden \\
-Description:& Part-time employment at 25 \%, besides my studies, where I worked as a software deverloper for\\&
-Ericsson AB. The goal of the project were to rebuild an existing GUI for an internal system using\\&
+Description:& Part-time employment at 25 \%, besides my studies, where I worked as a software developer for\\&
+Ericsson AB. The goal of the project was  to rebuild an existing GUI for an internal system using\\&
 Vaadin and Scala.
 \end{tabular}\\
 
