--- a/cv.tex
+++ b/cv.tex
@@ -91,12 +91,13 @@ ItalicFont = Fontin-Italic.otf
     \textsc{linkedin:}  & \url{https://se.linkedin.com/in/rasmus-tilljander-62830052}
 \end{tabular}
 %%%
-\section{Technical experience (1-5)}
+\section{Technical experience (5-1)}
 \begin{tabular}{rl}
-Beginners Knowledge(1):& Python3, PHP, C\#, Groovy, Lua\\
-Basic Knowledge(2):& Unix, C, X86-64, HLSL, GPGPU, Javascript, Unity, Spring Framework,\\& HTML, CSS, Scala \\
+
+Advanced Knowledge(4):& C++, Git, Game Development, Windows\\
 Intermediate Knowledge(3):& Linux, Agile Development, SQL, IA-32, Gradle, CMake, Android, Threading,  DirectX, \\& Memory Management, Java, Bash\\
-Advanced Knowledge(4):& C++, Git, Game Development, Windows
+Basic Knowledge(2):& Unix, C, X86-64, HLSL, GPGPU, Javascript, Unity, Spring Framework,\\& HTML, CSS, Scala \\
+Beginners Knowledge(1):& Python3, PHP, C\#, Groovy, Lua\\
 \end{tabular}
 
 %%%
