HTML and CSS is now put printed on the row above the previous version

--- a/cv.tex
+++ b/cv.tex
@@ -96,7 +96,7 @@ ItalicFont = Fontin-Italic.otf
 
 Advanced Knowledge(4):& C++, Git, Game Development, Windows\\
 Intermediate Knowledge(3):& Linux, Agile Development, SQL, IA-32, Gradle, CMake, Android, Threading,  DirectX, \\& Memory Management, Java, Bash\\
-Basic Knowledge(2):& Unix, C, X86-64, HLSL, GPGPU, Javascript, Unity, Spring Framework,\\& HTML, CSS, Scala \\
+Basic Knowledge(2):& Unix, C, X86-64, HLSL, GPGPU, Javascript, Unity, Spring Framework, HTML, CSS,\\& Scala \\
 Beginners Knowledge(1):& Python3, PHP, C\#, Groovy, Lua\\
 \end{tabular}
 
